-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 12, 13
-
Component/s: client-libs
-
b25
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8226111 | 14 | Anton Tarasov | P3 | Resolved | Fixed | team |
Linux Ubuntu 18.04 with gtk3 available. 4k screen set to 200% scale.
Robot.createScreenCapture() returns a black screenshot, and so does Robot.createMultiResolutionScreenCapture().
Robot.createScreenCapture() returns a black screenshot, and so does Robot.createMultiResolutionScreenCapture().
- backported by
-
JDK-8226111 Robot.createScreenCapture() returns black image on HiDPI linux with gtk3
-
- Resolved
-
- relates to
-
JDK-8280861 Robot color picker broken on Linux with scaling above 100%
-
- Resolved
-
-
JDK-8226654 Some swing gtk regression tests fail with "java.lang.InternalError: Unable to load native GTK libraries"
-
- Closed
-
-
JDK-8269245 [wayland] java.awt.Robot.createScreenCapture(r) produces black image
-
- Closed
-
- links to