8225118: Robot.createScreenCapture() returns black image on HiDPI linux with gtk3

Reviewed-by: serb